fix:Align prop for QDatetime, QSelect, QDialogSelect, QChipsInput

--- a/src/components/input/input.mat.styl
+++ b/src/components/input/input.mat.styl
@@ -15,7 +15,6 @@
   min-width 70px
   min-height 18px
   font-size inherit
-  line-height 1
   overflow hidden
   resize none
   display flex
